--- a/DogDepot/Views/Animals/Create.cshtml
+++ b/DogDepot/Views/Animals/Create.cshtml
@@ -9,14 +9,17 @@
 {
   @Html.LabelFor(model => model.Name)
   @Html.TextBoxFor(model => model.Name)
+  <br />
   @Html.LabelFor(model => model.Breed)
   @Html.TextBoxFor(model => model.Breed)
+  <br />
+  @* <!-- @Html.HiddenFor(model => model.Date) --> *@
   @Html.LabelFor(model => model.Age)
   @Html.TextBoxFor(model => model.Age)
-  @Html.LabelFor(model => model.Date)
-  @Html.Hidden("hdnDateTime", @DateTime.Now.ToString())
+  <br />
   @Html.LabelFor(model => model.Description)
   @Html.TextAreaFor(model => model.Description)
+  <br />
   <input type="submit" value="Add new animal" />
 }
 
