Co-Authored-By: Ravin Fisher <ravesterrr@gmail.com>
Co-Authored-By: Gabriel Tucker <gabrieltucker260@gmail.com>

--- a/DogDepot/Views/Animals/Index.cshtml
+++ b/DogDepot/Views/Animals/Index.cshtml
@@ -14,6 +14,7 @@
 <ul>
   @foreach (Animal animal in Model)
   {
-    <li>@animal.Name | @animal.Age | @animal.Breed </li>
+    <li>@Html.ActionLink($"{@animal.Name} | {@animal.Age} | {@animal.Breed}", "Details", new { id = animal.AnimalId })
+    </li>
   }
 </ul>
