--- a/DogDepot/Views/Animals/Details.cshtml
+++ b/DogDepot/Views/Animals/Details.cshtml
@@ -3,7 +3,7 @@
 }
 @model DogDepot.Models.Animal
 
-<h2>Doggy Details</h2>
+<h2>Amimal Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</h3>
 <p>@Html.ActionLink("Back to list", "Index")</p>
