--- a/DogDepot/Views/Shared/_Layout.cshtml
+++ b/DogDepot/Views/Shared/_Layout.cshtml
@@ -25,13 +25,17 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="Create">Add
-                                Animal</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="Index">View
                                 Animals</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="Create">Add
+                                Animal</a>
+                        </li>
+                        <!-- <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="Index">View
+                                Animals</a>
+                        </li> -->
                     </ul>
                 </div>
             </div>
