--- a/DogDepot/Views/Home/Index.cshtml
+++ b/DogDepot/Views/Home/Index.cshtml
@@ -3,5 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to DogDepot!🥏🐕</h1>
+    <h1 class="display-4">Welcome to
+        <span class="logo">DogDepot</span>!🥏🐕
+    </h1>
+    <h3>Where we have more than just dogs!</h3>
+    <h4>Take a look at the animals that are looking for their forever home.</h4>
+    <p>@Html.ActionLink("See all species", "Index", "Species")</p>
 </div>
