--- a/DogDepot/Views/Animals/Create.cshtml
+++ b/DogDepot/Views/Animals/Create.cshtml
@@ -8,17 +8,21 @@
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name)
+  <br />
+  @Html.TextBoxFor(model => model.Name, new { placeholder = "Name" })
   <br />
   @Html.LabelFor(model => model.Breed)
-  @Html.TextBoxFor(model => model.Breed)
+  <br />
+  @Html.TextBoxFor(model => model.Breed, new { placeholder = "Breed" })
   <br />
   @* <!-- @Html.HiddenFor(model => model.Date) --> *@
   @Html.LabelFor(model => model.Age)
-  @Html.TextBoxFor(model => model.Age)
+  <br />
+  @Html.TextBoxFor(model => model.Age, new { placeholder = "Age" })
   <br />
   @Html.LabelFor(model => model.Description)
-  @Html.TextAreaFor(model => model.Description)
+  <br />
+  @Html.TextAreaFor(model => model.Description, new { placeholder = "Enter Your Description Here..." })
   <br />
   <input type="submit" value="Add new animal" />
 }
