--- a/DogDepot/Views/Animals/Details.cshtml
+++ b/DogDepot/Views/Animals/Details.cshtml
@@ -3,7 +3,10 @@
 }
 @model DogDepot.Models.Animal
 
-<h2>Amimal Details</h2>
+<h2>Animal Details</h2>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</h3>
+<h3>@Html.DisplayNameFor(model => model.Description):  @Html.DisplayFor(model => model.Description)</h3>
+<br />
+<p>@Html.ActionLink("Edit Animal", "Edit", new { id = Model.AnimalId })</p>
+<p>@Html.ActionLink("Delete Animal", "Delete", new { id = Model.AnimalId })</p>
 <p>@Html.ActionLink("Back to list", "Index")</p>
