--- a/DogDepot/Views/Animals/Index.cshtml
+++ b/DogDepot/Views/Animals/Index.cshtml
@@ -9,7 +9,7 @@
 
 @if (@Model.Count == 0)
 {
-  <h3>No amimals need a home at this time!</h3>
+  <h3>No animals need a home at this time!</h3>
 }
 else
 {
