--- a/DogDepot/Views/Shared/_Layout.cshtml
+++ b/DogDepot/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Animals" asp-action="Create">Add
                                 Species</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Species" asp-action="Index">View
                                 Species</a>
